--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,7 +111,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-slate-300 dark:bg-slate-600 rounded-full;
+  @apply rounded-full bg-slate-300 dark:bg-slate-600;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -131,4 +131,12 @@
   transform: scaleX(
     -1
   ); /* mirror it so translateX now reveals from the right */
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome/Safari/WebKit */
 }
